--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/x-data-grid": "^5.17.9",
+    "@types/react-data-grid": "^4.0.8",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
