--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.8",
     "@mui/x-data-grid": "^5.17.9",
     "@types/react-data-grid": "^4.0.8",
+    "js-cookie": "^3.0.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -23,6 +24,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
