--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@types/react-data-grid": "^4.0.8",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-slideshow-image": "^4.0.5",
     "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
