--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.8",
     "@mui/x-data-grid": "^5.17.9",
     "@types/react-data-grid": "^4.0.8",
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
