--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-data-grid": "^4.0.8",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
+    "jose": "^4.11.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
