add payments with paypal

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,15 @@ MONGO_URL=[url]
 JWT_SECRET_SEED=[secret]
 
 NEXT_PUBLIC_TAX_RATE=0.15
+
+NEXTAUTH_SECRET=[secret]
+
+
+GITHUB_ID=[GID]
+GITHUB_SECRET=[GS]
+
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=[Paypal client id]
+PAYPAL_SECRET=[paypal secret]
+
+PAYPAL_OAUTH_URL=[url paypal oauth]
+PAYPAL_ORDERS_URL=[order checkout url]
