--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/x-data-grid": "^5.17.9",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@types/react-data-grid": "^4.0.8",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
